# rosetta-sdl

./: .gitignore  Dockerfile  Dockerfile.ui  LICENSE  Makefile  README.md  deploy.sh  docker-compose.yml  pyproject.toml
agentcore/: .bedrock_agentcore.yaml  ac_utils.py  deploy_agent.py  deploy_to_agentcore.ipynb  deployment_info.json  rosetta_mcp.py
cdk/: package-lock.json  package.json  tsconfig.json
cdk/lib/: rosetta-sdl-stack.ts  semantic-layer-stack.ts
sample/: config.yaml  metrics.yaml  seed_graph.cypher
src/: auth.py  config.py  main.py
src/api/: routes_admin.py  routes_catalog.py  routes_metrics.py  routes_query.py
src/catalog/: models.py
src/discovery/: enrichment.py  glue_scanner.py  s3vectors_scanner.py
src/graph/: client.py  loader.py  queries.py  schema.py
src/mcp/: server.py
src/metrics/: compiler.py  loader.py
src/query/: athena_executor.py  disambiguator.py  embeddings.py  firewall.py  generator.py  router.py  vectors_executor.py
tests/unit/: test_compiler.py  test_disambiguator.py  test_firewall.py  test_router.py
ui/: index.html  package-lock.json
ui/src/: App.tsx  api.ts  auth.ts  index.css  main.tsx  vite-env.d.ts
ui/src/pages/: Admin.tsx  Dashboard.tsx  Documents.tsx  GraphExplorer.tsx  Login.tsx  Metrics.tsx  QueryBuilder.tsx  SimilarityExplorer.tsx  TableDetail.tsx  Tables.tsx
